--- a/src/lib/contents/security/2022-03-01.md
+++ b/src/lib/contents/security/2022-03-01.md
@@ -1,5 +1,5 @@
 ---
-title: Vulnerability affecting Gtipod
+title: Vulnerability affecting Gitpod
 excerpt: We deployed a security update to Gitpod. This prevents an unsecured Google API endpoint from being available which can lead to information disclosure between workspaces.
 date: 2022-02-21
 ---
