Highlight GHE support.

--- a/src/lib/contents/changelog/2022-03-10.md
+++ b/src/lib/contents/changelog/2022-03-10.md
@@ -1,6 +1,6 @@
 ---
-title: TODO
-excerpt: TODO
+title: Support for GitHub Enterprise Server
+excerpt: Gitpod now supports repositories hosted on GitHub Enterprise Server.
 date: 2022-03-10
 image: 2022-03-10.jpg
 alt:
@@ -10,9 +10,13 @@ alt:
   import Contributors from "$lib/components/changelog/contributors.svelte";
 </script>
 
-TODO: Insert the featured changelog entry here.
+Gitpod now works with public, private, or internal repositories on your own instance of GitHub Enterprise (GHE).
 
-<p><Contributors usernames="" /></p>
+To set this up, please follow our 2-step guide [in the documentation](/docs/github-enterprise-integration).
+
+For any and all feedback, please use the dedicated [feedback issue](https://github.com/gitpod-io/gitpod/issues/8929) or [chat with us](https://www.gitpod.io/chat).
+
+<p><Contributors usernames="AlexTugarev,andrew-farries,geropl,jankeromnes" /></p>
 
 ### Fixes and improvements
 
