Beam users directly into https://gitpod.io/

--- a/src/lib/contents/changelog/2022-01-14.md
+++ b/src/lib/contents/changelog/2022-01-14.md
@@ -22,7 +22,7 @@ You may have seen a `.bashrc` file or similar in a Unix environment. Basically, 
 
 Dotfiles allow you to really customize your workflow and hence can increae your productivity significantly. It's well worth looking into.
 
-With today's announcement, you can now leverage these exact same files in all your Gitpod workspaces! This removes one more friction for anyone who's been on the fence as to whether or not cloud-based developer environments are worth exploring. Invest an hour today, you may like what you find. Start at [gitpod.io/new](https://gitpod.io/new).
+With today's announcement, you can now leverage these exact same files in all your Gitpod workspaces! This removes one more friction for anyone who's been on the fence as to whether or not cloud-based developer environments are worth exploring. Invest an hour today, you may like what you find. Start at [gitpod.io/preferences](https://gitpod.io/preferences).
 
 Please try it out and share your experience with us and the Gitpod community. You can [learn more about Dotfiles](/docs/config-dotfiles) in the documentation.
 
